--- a/src/components/CharacterSelect/style.css
+++ b/src/components/CharacterSelect/style.css
@@ -16,6 +16,11 @@
   height: 78vh;
 }
 
+#player1-character:hover h1,
+#player2-character:hover h1 {
+  padding-bottom: 10px;
+}
+
 .dropdown-item-1:hover,
 .dropdown-item-2:hover {
   background-color: darkgreen;
