--- a/src/components/CharacterSelect/style.css
+++ b/src/components/CharacterSelect/style.css
@@ -14,6 +14,7 @@
 #player1-character:hover,
 #player2-character:hover {
   height: 78vh;
+  border-color: #77ca00;
 }
 
 #player1-character:hover h1,
