Overhaul on character select system
Changed from ugly dropdown list to modal that mimics character select screen

Also updated to match extrapoint new style

Various other small changes with styling

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 html {
-  background-color: #27313d;
-  color: #77ca00;
+  background-color: #10223e;
+  color: #aec4d4;
   font-weight: bold;
+}
+
+.entrant {
+  width: 50%;
 }
