--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ html {
 .entrant {
   width: 50%;
 }
+
+.z-40 {
+  transform: translate3d(0, 0, 100px);
+}
+
+.z-50 {
+  transform: translate3d(0, 0, 200px);
+}
